# detaMVC

./: .gitignore  README.md  pyproject.toml
detamvc/: generator.py  main.py  model.py  user_config.json  utilities.py
detamvc/extras/: flickr.py
detamvc/templates/authlib_users/: model.py  router.py  utils.py
detamvc/templates/authlib_users/templates/: dashboard.html  login.html  not_authenticated.html  signup.html
detamvc/templates/core/: .env  main.py  requirements.txt
detamvc/templates/core/static_pages/: router.py
detamvc/templates/core/static_pages/static/css/: core.css  stylesheet.css
detamvc/templates/core/static_pages/static/js/: color-modes.js
detamvc/templates/core/static_pages/templates/: _base.html  _color_mode.html  _navlinks.html  _svg_symbols.html  index.html
detamvc/templates/mkdocs_core/: main.py  mkdocs.yml  requirements.txt
detamvc/templates/mkdocs_core/docs/: index.md
detamvc/templates/mkdocs_core/docs/tutorial/: markdown_basics.md
detamvc/templates/scaffold/: model.py  router.py
detamvc/templates/scaffold/templates/: form.html  index.html  view.html
detamvc/templates/scaffold_helpers/: bool.html  float.html  int.html  scaffold_navlink.html  str.html  text.html  trix_meta_content.html  user_login.html  wysiwyg.html
tests/: test_detamvc.py
